@@ -1,12 +1,12 @@
 ________________________________________________________________________________
-Frame3DD version: 20130318               http://frame3dd.sf.net/
-GPL Copyright (C) 1992-2013, Henri P. Gavin 
+Frame3DD version: 20140121               http://frame3dd.sf.net/
+GPL Copyright (C) 1992-2014, Henri P. Gavin 
 Frame3DD is distributed in the hope that it will be useful but with no warranty.
 For details see the GNU Public Licence: http://www.fsf.org/copyleft/gpl.html
 ________________________________________________________________________________
 
 Example C: a tetrahedral frame - static and dynamic analysis (in  kip) 
-Mon Dec 30 16:00:44 2013
+Tue Jan 21 15:57:40 2014
 ________________________________________________________________________________
 In 2D problems the Y-axis is vertical.  In 3D problems the Z-axis is vertical.
 ________________________________________________________________________________
